fix UI issue + typo

--- a/charcreator.html
+++ b/charcreator.html
@@ -77,56 +77,56 @@
       <h4>Smarts</h4>
       <p>Your character's smarts determines their knowledge, how quickly their learn, and their "book-smarts". A character high in smarts may be found in a library studying, working on a new charm or magical creation, perfecting an incantation or divining the future to be prepared for what lies ahead.</p><br>
       <ul>
-        <li> <span>Magical Theory</span></li>
-        <li> <span>Muggle Knowledge</span></li>
-        <li> <span>Insightfulness</span></li>
-        <li> <span>Learning bonus to charmwork</span></li>
-        <li> <span>Learning bonus to divinatory magic (arithmancy, astronomoy, divination)</span></li>
+        <li class="wandlist"> <span>Magical Theory</span></li>
+        <li class="wandlist"> <span>Muggle Knowledge</span></li>
+        <li class="wandlist"> <span>Insightfulness</span></li>
+        <li class="wandlist"> <span>Learning bonus to charmwork</span></li>
+        <li class="wandlist"> <span>Learning bonus to divinatory magic (arithmancy, astronomoy, divination)</span></li>
       </ul>
 
       <h4>Grit</h4>
       <p>Your character's grit determines their ability to take hits, solve problems and face adversity, and help others do the same. A character with high grit could be found helping friends, solving problems, or immersed in creation of a complicated potion. A character with high grit will rarely be caught off-guard.</p><br>
       <ul>
-        <li> <span>Health and defense</span></li>
-        <li> <span>Determination in the face of adversity</span></li>
-        <li> <span>Investigative skills</span></li>
-        <li> <span>Learning bonus to defensive magic</span></li>
-        <li> <span>Learning bonus to potionmaking</span></li>
+        <li class="wandlist"> <span>Health and defense</span></li>
+        <li class="wandlist"> <span>Determination in the face of adversity</span></li>
+        <li class="wandlist"> <span>Investigative skills</span></li>
+        <li class="wandlist"> <span>Learning bonus to defensive magic</span></li>
+        <li class="wandlist"> <span>Learning bonus to potionmaking</span></li>
       </ul>
 
       <h4>Charm</h4>
       <p>Your character's charm determines their charisma, how easily they can get along with others and weave the social fabric to match their desires. A charming character could typically be found with a group of friends, the type of person you would definitely prefer as a friend than as an enemy.</p><br>
       <ul>
-        <li> <span>Persuasiveness</span></li>
-        <li> <span>Deception</span></li>
-        <li> <span>Intimidation</span></li>
-        <li> <span>Learning bonus to hexes, curses, and jinxes (an offensive subset of spells)</span></li>
+        <li class="wandlist"> <span>Persuasiveness</span></li>
+        <li class="wandlist"> <span>Deception</span></li>
+        <li class="wandlist"> <span>Intimidation</span></li>
+        <li class="wandlist"> <span>Learning bonus to hexes, curses, and jinxes (an offensive subset of spells)</span></li>
       </ul>
 
       <h4>Vigor</h4>
       <p>Your character's vigor determines their athleticism, fitness, and offensive magic. A character high in vigor could often be found on the quidditch pitch, or in a duelling club.</p><br>
       <ul>
-        <li> <span>Athletics</span></li>
-        <li> <span>Dexterity</span></li>
-        <li> <span>Stealth</span></li>
-        <li> <span>Learning bonus to offensive magic</span></li>
-        <li> <span>Learning bonus to transfiguration magic</span></li>
+        <li class="wandlist"> <span>Athletics</span></li>
+        <li class="wandlist"> <span>Dexterity</span></li>
+        <li class="wandlist"> <span>Stealth</span></li>
+        <li class="wandlist"> <span>Learning bonus to offensive magic</span></li>
+        <li class="wandlist"> <span>Learning bonus to transfiguration magic</span></li>
       </ul>
 
       <h4>Loyalty</h4>
       <p>Your character's loyalty determines their ability to befriend creatures, perceive things other may not, and have luck on their side. A loyal character could be found healing and helping others, forming strong friendships, or taking care of advanced magical creatures and magical plants. A loyal character may seem to attract positivity like a magnet.</p><br>
       <ul>
-        <li> <span>Magical Theory</span></li>
-        <li> <span>Muggle Knowledge</span></li>
-        <li> <span>Insightfulness</span></li>
-        <li> <span>Learning Bonus to charmwork</span></li>
-        <li> <span>Learning bonus to divinatory magic (arithmancy, astronomoy, divination)</span></li>
+        <li class="wandlist"> <span>Magical Theory</span></li>
+        <li class="wandlist"> <span>Muggle Knowledge</span></li>
+        <li class="wandlist"> <span>Insightfulness</span></li>
+        <li class="wandlist"> <span>Learning Bonus to charmwork</span></li>
+        <li class="wandlist"> <span>Learning bonus to divinatory magic (arithmancy, astronomoy, divination)</span></li>
       </ul>
       <br><br>
       <p>When you have some idea of what sort of character you want to play, choose your stats below. As a level 1 character, you have 3 options:</p><br>
       <p> 1) Distribute either 24 points among the stats</p>
       <p> 2) Distribute 22 points and choose a perk for your character later (Your perk will be chosen in the next step). </p>
-      <p> 3) If you want to roll stats, roll 8D6 and choose the highest 5 die, and distribute the sum of those 5 die in any way you choose. If you choose not to take a perk, add an additional 2 to the sum. The digital sttat roller will also assign the numbers - feel free to reassign however you wish. </p><br></p>
+      <p> 3) If you want to roll stats, roll 8D6 and choose the highest 5 die, and distribute the sum of those 5 die in any way you choose. If you choose not to take a perk, add an additional 2 to the sum. The digital stat roller will also assign the numbers - feel free to reassign however you wish. </p><br></p>
       <p> If you are creating a character above level 1, you gain 2 virtue points per level, or 1 perk per level.</p><p>Each virtue has a virtue modifier. This will be automatically calculated based on your virtue score. A virtue score modifier can also be manually calculated with the formula (ceil(virtue score / 2) - 2). You can also find a table in the rulebook.</p><br><br>
 
     <span>Roll stats (no perk - 24 points): <button onclick="rollstats(false)" class="btn btn-outline-secondary" type="button" id="noperkroll"><i class="fa-solid fa-dice" style="color: #af804b;"></i></button></span><br><br>
