minor syntax update

--- a/charcreator.html
+++ b/charcreator.html
@@ -37,8 +37,8 @@
         <div class="input-group input-group-sm mb-3">
           <span class="input-group-text" id="inputGroup-sizing-sm">Character Name:</span>
           <input type="text" class="form-control" id="charname" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
-          <button class="btn btn-outline-secondary" onclick="rollname(true);" type="button" id="button-addon2"><i class="fa-solid fa-dice" style="color: #cf76cf;"></i></button>
-          <button class="btn btn-outline-secondary" onclick="rollname(false);" type="button" id="button-addon2"><i class="fa-solid fa-dice" style="color: #7d8ed8;"></i></button>
+          <button class="btn btn-outline-secondary" onclick="rollname(true)" type="button" id="button-addon2"><i class="fa-solid fa-dice" style="color: #cf76cf;"></i></button>
+          <button class="btn btn-outline-secondary" onclick="rollname(false)" type="button" id="button-addon2"><i class="fa-solid fa-dice" style="color: #7d8ed8;"></i></button>
         </div>
         <div class="input-group input-group-sm mb-3">
           <label class="input-group-text" for="inputGroupSelect01">Character Level:</label>
