Fix perks more, finish buttons for skills.

--- a/charcreator.html
+++ b/charcreator.html
@@ -304,8 +304,8 @@
                 <td>Smarts</td>
                 <td id="skill_insight">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_insight')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_insight')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
               <tr>
@@ -313,8 +313,8 @@
                 <td>Grit</td>
                 <td id="skill_determination">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_determination')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_determination')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
               <tr>
@@ -322,8 +322,8 @@
                 <td>Grit</td>
                 <td id="skill_investigation">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_investigation')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_investigation')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
               <tr>
@@ -331,8 +331,8 @@
                 <td>Charm</td>
                 <td id="skill_persuasion">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_persuasion')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_persuasion')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
               <tr>
@@ -340,8 +340,8 @@
                 <td>Charm</td>
                 <td id="skill_intimidation">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_intimidation')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_intimidation')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
               <tr>
@@ -349,8 +349,8 @@
                 <td>Charm</td>
                 <td id="skill_deception">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_deception')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_deception')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
               <tr>
@@ -358,8 +358,8 @@
                 <td>Vigor</td>
                 <td id="skill_athletics">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_athletics')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_athletics')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
               <tr>
@@ -367,8 +367,8 @@
                 <td>Vigor</td>
                 <td id="skill_dexterity">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_dexterity')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_dexterity')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
               <tr>
@@ -376,8 +376,8 @@
                 <td>Vigor</td>
                 <td id="skill_stealth">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_stealth')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_stealth')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
               <tr>
@@ -385,8 +385,8 @@
                 <td>Loyalty</td>
                 <td id="skill_creature_care">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_creature_care')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_creature_care')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
               <tr>
@@ -394,8 +394,8 @@
                 <td>Loyalty</td>
                 <td id="skill_perception">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_perception')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_perception')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
               <tr>
@@ -403,8 +403,8 @@
                 <td>Loyalty</td>
                 <td id="skill_luck">0</td>
                 <td>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_muggle_knowledge')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
-                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_muggle_knowledge')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="addskill('skill_luck')" id="addstat1"><i class="fa-solid fa-plus" style="color: #af804b;"></i></button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button" onclick="remskill('skill_luck')" id="remstat1"><i class="fa-solid fa-minus" style="color: #af804b;"></i></button>
                 </td>
               </tr>
             </tbody>
