Add more to character maker, fix perk interaction with stats

--- a/charcreator.html
+++ b/charcreator.html
@@ -80,7 +80,7 @@
       <p>A character in Wands & Such has virtues, which determine their skills and abilities in different scenarios. These Virtues include smarts, grit, charm, vigor and loyalty. A "learning bonus" affects how quickly your character picks up new spells and how easily they can become a practiced caster of that spell.</p>
       
       <h4>Smarts</h4>
-      <p>Your character's smarts determines their knowledge, how quickly their learn, and their "book-smarts". A character high in smarts may be found in a library studying, working on a new charm or magical creation, perfecting an incantation or divining the future to be prepared for what lies ahead.</p><br>
+      <p>Your character's smarts determines their knowledge, how quickly they learn, and their "book-smarts". A character high in smarts may be found in a library studying, working on a new charm or magical creation, perfecting an incantation or divining the future to be prepared for what lies ahead.</p><br>
       <ul>
         <li class="wandlist"> <span>Magical Theory</span></li>
         <li class="wandlist"> <span>Muggle Knowledge</span></li>
@@ -119,17 +119,17 @@
       </ul>
 
       <h4>Loyalty</h4>
-      <p>Your character's loyalty determines their ability to befriend creatures, perceive things other may not, and have luck on their side. A loyal character could be found healing and helping others, forming strong friendships, or taking care of advanced magical creatures and magical plants. A loyal character may seem to attract positivity like a magnet.</p><br>
+      <p>Your character's loyalty determines their ability to befriend creatures, perceive things others may not, and have luck on their side. A loyal character could be found healing and helping others, forming strong friendships, or taking care of advanced magical creatures and magical plants. A loyal character may seem to attract positivity like a magnet.</p><br>
       <ul>
         <li class="wandlist"> <span>Magical Theory</span></li>
         <li class="wandlist"> <span>Muggle Knowledge</span></li>
         <li class="wandlist"> <span>Insightfulness</span></li>
-        <li class="wandlist"> <span>Learning Bonus to charmwork</span></li>
+        <li class="wandlist"> <span>Learning bonus to charmwork</span></li>
         <li class="wandlist"> <span>Learning bonus to divinatory magic (arithmancy, astronomoy, divination)</span></li>
       </ul>
       <br><br>
       <p>When you have some idea of what sort of character you want to play, choose your stats below. As a level 1 character, you have 3 options:</p><br>
-      <p> 1) Distribute either 24 points among the stats</p>
+      <p> 1) Distribute 24 points among the stats</p>
       <p> 2) Distribute 22 points and choose a perk for your character later (Your perk will be chosen in the next step). </p>
       <p> 3) If you want to roll stats, roll 8D6 and choose the highest 5 die, and distribute the sum of those 5 die in any way you choose. If you choose not to take a perk, add an additional 2 to the sum. The digital stat roller will also assign the numbers - feel free to reassign however you wish. </p><br></p>
       <p> If you are creating a character above level 1, you gain 2 virtue points per level, or 1 perk per level.</p><p>Each virtue has a virtue modifier. This will be automatically calculated based on your virtue score. A virtue score modifier can also be manually calculated with the formula (ceil(virtue score / 2) - 2). You can also find a table in the rulebook.</p><br><br>
@@ -194,7 +194,7 @@
 
       
       <h5>Step 4,5: Learning Modifiers and Skills</h5>
-      <p>Your character's learning modifiers are set automatically based on your virtue scores. Your character skills are also set automatically, however you gain an additional 10 points to distribute as you see fit.</p>
+      <p>Your character's learning modifiers are set automatically based on your virtue scores. Your character's skills are also set automatically, however you gain an additional 10 points to distribute as you see fit.</p>
       <div style="display:flex">
         <div style="flex:1 1 auto">
           <table class="table-custom">
@@ -530,7 +530,7 @@
       <p>Each student may choose one “signature spell” which can only be changed once per term, and can be chosen at any time. This signature spell gains a +1 modifier on top of 
         its “practice-level modifier”. You can note this under your “spell book”, though it’s not recommended to choose it immediately.</p><br>
       <h5>Step 9: Starting Galleons</h5>
-      <p>You begin with 100 + 6D8 galleons to buy supplies. Pocket money will not arrive unil the second week of the term. If your character is starting with the "Wealthy" or "Heir/Heiress" perk, they can use their favor immediately.</p>
+      <p>You begin with 100 + 6D8 galleons to buy supplies. Pocket money will not arrive until the second week of the term. If your character is starting with the "Wealthy" or "Heir/Heiress" perk, they can use their favour immediately.</p>
       <br>
       <button onclick="rollgold()" class="btn btn-sm btn-outline-secondary" type="button" id="goldroll"><i class="fa-solid fa-dice" style="color: #af804b;"></i></button><br>
       <br><span id="starting-gold">Starting galleons: </span> 
@@ -543,6 +543,7 @@
       <h5>Step 13: Character background</h5>
       <p>Work out your character's background, flaws, bonds, fears, and motivations.</p>
 
+      <br><br><br><br><br><br><br><br>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
