--- a/navbar.html
+++ b/navbar.html
@@ -21,6 +21,12 @@
           <li class="nav-item">
             <a class="nav-link" href="shops.html">Shops</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="items.html">Items</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="classes.html">Classes</a>
+          </li>
         </ul>
       </div>
     </div>
